  system restart.
- SchedulerFactory is created to manage and persist scheduled tasks. 
  In the eve.yaml configuration, a SchedulerFactory class must be specified  
  instead of a Scheduler class.
- Added validation of an Agents class on agent creation.
- Improved functionality for reading and merging (inherited) annotations.


2013-01-17, version 0.16

- Note: Eve 0.16 is incompatible with 0.15
- Annotations @Name and @Required do not need to be defined in an agents
  implementation, when the annotations for the methods are defined in the agents
  interface.
- Moved @Name and @Required annotations from json.annotation to 
  eve.agent.annotation.
- Renamed "services" to "transport". XmppService is now called 
  XmppTransportService, HttpService is now called HttpTransportService.
- Moved JSONRPC classes to com.almende.eve.rpc.jsonrpc.
- Removed Session objects.
- Fixed requiring a sender for all calls via the AgentFactory.
- Fixed method hasInterface not finding extended interfaces.


2013-01-11, version 0.15

- The send method of the Agent is more generic and no longer only accepts an
  ObjectNode as params, but also a Map or POJO. 
- An agent proxy can be created via the AgentFactory by providing a Java 
  Interface. So instead of Agent.send(url, method, params, type) where the 
  method is a string and one has to prepare an object with the parameters, one 
  can create a proxy for the agent and execute a regular java method call like
  ProxyAgent.method(a, b).
  When a call is made to a local agent, the local agents method is immediately
  invoked, without converting the call into JSON-RPC.
- Improved stability of the agents context.


2012-12-21, version 0.14

- Implemented synchronous send for the XmppService.
- Re-implemented the LogAgent, used to monitor an agents events in their 
  web interface.


2012-12-14, version 0.13

- Updated the agents web interface to show all its urls
- Renamed the parameter XmppService.serviceName to XmppService.service

