@@ -19,6 +19,9 @@ http://almende.github.com/eve/
   instead of a Scheduler class.
 - Added validation of an Agents class on agent creation.
 - Improved functionality for reading and merging (inherited) annotations.
+- Renamed a number of classes:
+  - XmppTransportService -> XmppService
+  - HttpTransportService -> HttpService
 
 
 2013-01-17, version 0.16
